# home_bank

./: .flake8  .gitignore  README.md  operations.json  pyproject.toml
decorators/: log.py  mylog.txt
external_api/: external_api.py
generators/: card_number_generator.py  filter_by_currency.py  transaction_discriptions.py
logs/: logging_config.py  masks.py  utils.py
pandas_exel_csv/: pandas_csv_exel.py  read_panda_file.py
src/: get_date.py  masks.py  processing.py  widget.py
tests/: conftest.py  masks_log.py  test_api.py  test_card_number_generator.py  test_external_api.py  test_filter_by_currency.py  test_get_date.py  test_log.py  test_masks.py  test_pandas_csv_exel.py  test_processing.py  test_transaction_discriptions.py  test_utils.py  test_widget.py  utils_log.py
utils/: utils.py
