[tool.poetry]
name = "home-work-poetry"
version = "0.1.0"
description = ""
authors = ["Pershin Roman"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.black]
#Максимальная длина строки
line-length=120


[tool.isort]
line_length=120


[tool.mypy]
disallow_untyped_defs=true
no_implicit_optional=true
warn_return_any=true
check_untyped_defs=true
strict=true
warn_unreachable=true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
